The order of items has been changed to the default one Clean up code